--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -1,5 +1,21 @@
 {
-    "app_title": "PsycoRact",
+  "app_title": "WeCare",
+  "homepage": {
+      "phrase1": "نهتم ",
+      "phrase2": "بك،",
+      "phrase3": "نستمع ",
+      "phrase4": "اليك.",
+      "phrase5": "لن تكون وحيدا أبدا.",
+      "button": "اطلب استشارة"
+  },
+  "aboutpage": {
+    "phrase1": "منصة تربط الطلاب والمتخصصين في الصحة النفسية.",
+    "phrase2": "sommes attentifs,",
+    "phrase3": "Nous ",
+    "phrase4": "écoutons.",
+    "phrase5": "Vous ne serez jamais seuls.",
+    "button": "Consultez"
+},
     "language": "اللغة",
     "home": "الصفحة الرئيسية",
     "about": "اعرف المزيد عنا",
