--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -1,5 +1,21 @@
 {
-  "app_title": "PsycoRact",
+  "app_title": "WeCare",
+  "homepage": {
+      "phrase1": "We ",
+      "phrase2": "care,",
+      "phrase3": "We ",
+      "phrase4": "listen.",
+      "phrase5": "You will never be alone.",
+      "button": "Consult"
+  },
+  "aboutpage": {
+    "phrase1": "A platform that links students with mental health professionals.",
+    "phrase2": "sommes attentifs,",
+    "phrase3": "Nous ",
+    "phrase4": "écoutons.",
+    "phrase5": "Vous ne serez jamais seuls.",
+    "button": "Consultez"
+},
   "language": "Language",
   "home": "Home",
   "about": "About",
